# ForgeNPU

./: .dockerignore  .gitignore  Dockerfile  NEXT_STEPS.md  README.md  SETUP.md  compose.yaml  progetto_npu_ai.md  pyproject.toml
.github/workflows/: ci.yml
create_npu/: __init__.py  architect.py  benchmark.py  candidate_space.py  cli.py  compiler.py  dataset.py  environment.py  gemmini_reference.py  generator_backend.py  golden_model.py  harness.py  learning_feedback.py  memory_planner.py  models.py  pipeline.py  reference_coverage.py  reporting.py  requirement_parser.py  rtl_generator.py  scorer.py  simulation_wrapper.py  workloads.py
examples/requirements/: transformer_int8.txt
runs/: README.md
runs/dataflow_tile_check/: candidates.json  result.json
runs/dma_cluster_check/: candidates.json  result.json
runs/final_check/: candidates.json  result.json
runs/report_check/: candidates.json  environment.json  result.json
runs/scheduler_config_check/: candidates.json  result.json
runs/scheduler_config_check2/: candidates.json  result.json
runs/scheduler_config_check3/: candidates.json  result.json
runs/scratchpad_cluster_check/: candidates.json  result.json
runs/step1_check/: design_intent.md  result.json
runs/step2_check/: candidates.json  result.json
runs/step3_check/: candidates.json  environment.json  result.json
runs/tile_check/: candidates.json  result.json
runs/top_npu_check/: candidates.json  result.json
runs/top_npu_scaleout_check/: candidates.json  result.json
tests/: test_pipeline.py  test_simulation_wrapper.py
(+61 files in other folders)
